# Copyright © SixtyFPS GmbH <info@sixtyfps.io>
# SPDX-License-Identifier: (GPL-3.0-only OR LicenseRef-SixtyFPS-commercial)

[package]
name = "printerdemo"
version = "0.1.6"
authors = ["SixtyFPS <info@sixtyfps.io>"]
edition = "2018"
build = "build.rs"
publish = false
license = "(GPL-3.0-only OR LicenseRef-SixtyFPS-commercial)"

[[bin]]
path = "main.rs"
name = "printerdemo"

[features]

mcu-simulator = ["sixtyfps-rendering-backend-mcu/simulator"]
mcu-pico-st7789 = ["sixtyfps-rendering-backend-mcu/pico-st7789", "sixtyfps-rendering-backend-mcu/snapshot_renderer", "sixtyfps-build/mcu-pico-st7789"]

[dependencies]
sixtyfps = { path = "../../../api/sixtyfps-rs", default-features = false }
sixtyfps-corelib = { path = "../../../sixtyfps_runtime/corelib", default-features = false, features = ["libm"] }
sixtyfps-rendering-backend-mcu = { path = "../../../sixtyfps_runtime/rendering_backends/mcu", optional = true, default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"], optional = true}

once_cell = { version="1.9", features = ["atomic-polyfill"], default-features = false }

[build-dependencies]
sixtyfps-build = { path = "../../../api/sixtyfps-rs/sixtyfps-build" }

# Remove the `#wasm#` to uncomment the wasm build.
# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/#wasm# //" to generate the wasm build.

#wasm# [lib]
#wasm# path = "main.rs"
#wasm# crate-type = ["cdylib"]

#wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm# wasm-bindgen = { version = "0.2" }
#wasm# web-sys = { version = "0.3", features=["console"] }
#wasm# console_error_panic_hook = "0.1.5"
